manifests/dev/nocodb/Deployment-nocodb-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nocodb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    app.kubernetes.io/version: 2024.10.2
    helm.sh/chart: minio-14.7.15
  name: nocodb-minio
  namespace: nocodb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: nocodb
      app.kubernetes.io/name: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/credentials-secret: f64435a3390c7663284ef1cf13f21cfdf1b47f7f9e92139625677a2c49409960
      labels:
        app.kubernetes.io/instance: nocodb
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: minio
        app.kubernetes.io/version: 2024.10.2
        helm.sh/chart: minio-14.7.15
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: nocodb
                    app.kubernetes.io/name: minio
                topologyKey: kubernetes.io/hostname
              weight: 1
      automountServiceAccountToken: false
      containers:
        - env:
            - name: BITNAMI_DEBUG
              value: "false"
            - name: MINIO_SCHEME
              value: http
            - name: MINIO_FORCE_NEW_KEYS
              value: "no"
            - name: MINIO_API_PORT_NUMBER
              value: "9000"
            - name: MINIO_ROOT_USER
              valueFrom:
                secretKeyRef:
                  key: root-user
                  name: nocodb-minio
            - name: MINIO_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: root-password
                  name: nocodb-minio
            - name: MINIO_DEFAULT_BUCKETS
              value: nocodb
            - name: MINIO_BROWSER
              value: "on"
            - name: MINIO_PROMETHEUS_AUTH_TYPE
              value: public
            - name: MINIO_CONSOLE_PORT_NUMBER
              value: "9001"
            - name: MINIO_DATA_DIR
              value: /bitnami/minio/data
          image: docker.io/bitnami/minio:2024.10.2-debian-12-r0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /minio/health/live
              port: minio-api
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          name: minio
          ports:
            - containerPort: 9000
              name: minio-api
              protocol: TCP
            - containerPort: 9001
              name: minio-console
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: minio-api
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 375m
              ephemeral-storage: 2Gi
              memory: 384Mi
            requests:
              cpu: 250m
              ephemeral-storage: 50Mi
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /tmp
              name: empty-dir
              subPath: tmp-dir
            - mountPath: /opt/bitnami/minio/tmp
              name: empty-dir
              subPath: app-tmp-dir
            - mountPath: /.mc
              name: empty-dir
              subPath: app-mc-dir
            - mountPath: /bitnami/minio/data
              name: data
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: []
        sysctls: []
      serviceAccountName: nocodb-minio
      volumes:
        - emptyDir: {}
          name: empty-dir
        - name: data
          persistentVolumeClaim:
            claimName: nocodb-minio
