manifests/dev/nocodb/Pod-nocodb-test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: post-install,post-upgrade
    helm.sh/hook-delete-policy: hook-succeeded
  labels:
    app.kubernetes.io/instance: nocodb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nocodb
    app.kubernetes.io/version: 0.258.0
    helm.sh/chart: nocodb-0.4.5
  name: nocodb-test-connection
  namespace: nocodb
spec:
  containers:
    - args:
        - nocodb:8080/api/v1/health
      command:
        - wget
      image: busybox
      name: wget
  restartPolicy: Never
