manifests/dev/nocodb/Service-nocodb-minio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: nocodb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    app.kubernetes.io/version: 2024.10.2
    helm.sh/chart: minio-14.7.15
  name: nocodb-minio
  namespace: nocodb
spec:
  ports:
    - name: minio-api
      port: 9000
      targetPort: minio-api
    - name: minio-console
      port: 9001
      targetPort: minio-console
  selector:
    app.kubernetes.io/instance: nocodb
    app.kubernetes.io/name: minio
  type: ClusterIP
