manifests/dev/nocodb/Service-nocodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nocodb
  namespace: nocodb
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: nocodb
    app.kubernetes.io/name: nocodb
  type: ClusterIP
