manifests/dev/nocodb/Ingress-nocodb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: nocodb
  namespace: nocodb
spec:
  ingressClassName: traefik
  rules:
    - host: nocodb.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: nocodb
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - nocodb.home.kronkltd.net
      secretName: nocodb-tls
