manifests/dev/nocodb/NetworkPolicy-nocodb-minio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: nocodb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    app.kubernetes.io/version: 2024.10.2
    helm.sh/chart: minio-14.7.15
  name: nocodb-minio
  namespace: nocodb
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 9001
        - port: 9000
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: nocodb
      app.kubernetes.io/name: minio
  policyTypes:
    - Ingress
    - Egress
